ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kokoji-stt-code-app
    app.kubernetes.io/instance: kokoji-stt-code-app
    app.kubernetes.io/name: kokoji-stt-code-app
  name: kokoji-stt-code-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app.kubernetes.io/instance: kokoji-stt-code-app
    app.kubernetes.io/name: kokoji-stt-code-app
  sessionAffinity: None
  type: ClusterIP
