ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
# name: kokoji-app-route
  name: kokoji-app-el-route
spec:
  tls:
    termination: edge
  to:
    kind: Service
#   name: kokoji-stt-code-app
    name: el-kokoji-app-eventlister
    weight: 100
  wildcardPolicy: None
